# axiomatic

./: README.md
notes/: formal_system.md  resources.md
python/: axiomatic.py  first_attempt.py  pyproject.toml
python/second_attempt/: basics.py  functional.py  hilbert.py  main.py  pattern_match.py  propositional.py  smart.py  verifier.py
python/third_attempt/: main.py  polyfill.py  propositions.py  shorthand.py  unifier.py
rust/: Cargo.toml
